MediaSessionManager shouldn't use std::map https://bugs.webkit.org/show_bug.cgi?id=127003

Reviewed by Sam Weinig.

No new tests, no functional change.

Use an array instead of std::map.
* platform/audio/MediaSessionManager.cpp:
(WebCore::MediaSessionManager::MediaSessionManager):
(WebCore::MediaSessionManager::addRestriction):
(WebCore::MediaSessionManager::removeRestriction):
(WebCore::MediaSessionManager::restrictions):
(WebCore::MediaSessionManager::sessionWillBeginPlayback):
* platform/audio/MediaSessionManager.h:


Canonical link: https://commits.webkit.org/145081@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@162108 268f45cc-cd09-0410-ab3c-d52691b4dbfc